data/derived/comb/progs/unify/prog1709.ml.out
Characters 282-283:
  let (_, res) = List.fold_right f args base in res
                                 ^
Error: This expression has type int * int list -> int * int -> int * int list
       but an expression was expected of type
         int * int list -> int * int -> int * int
       Type int list is not compatible with type int 
